2001-10-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>

	* gaphor: initial version.
